@@ -4,7 +4,9 @@ use warnings;
 require 't/lib/db-common.pl';
 
 use TheSchwartz;
-use Test::More;
+use Test::More tests => 81;
+
+our $decline = 1;
 
 run_tests(
     8,
@@ -35,6 +37,49 @@ run_tests(
     }
 );
 
+run_tests(
+    21,
+    sub {
+        my $client = test_client( dbs => ['ts2'] );
+
+        {
+            $decline = 1;
+            $client->reset_abilities;
+            $client->can_do("Worker::DeclineWithTime");
+            $client->verbose(1);
+            Worker::DeclineWithTime->set_client($client);
+
+            for ( 1 .. 5 ) {
+                my $job = TheSchwartz::Job->new(
+                    funcname => 'Worker::DeclineWithTime',
+                    arg      => { num => $_ },
+                );
+                my $h = $client->insert($job);
+                ok( $h, "inserted job $_" );
+            }
+
+            for ( 1 .. 5 ) {
+                my $rv = eval { $client->work_once; };
+                ok( $rv, "did stuff 1-5" );
+            }
+
+            my $job = Worker::DeclineWithTime->grab_job($client);
+            ok( !$job, "didn't get a job, because run_after" );
+
+            sleep 5;
+
+            $decline = 0;
+
+            for ( 1 .. 5 ) {
+                my $rv = eval { $client->work_once; };
+                ok( $rv, "end stuff 1-5" );
+            }
+        }
+
+        teardown_dbs('ts2');
+    }
+);
+
 done_testing;
 
 ############################################################################
@@ -48,7 +93,7 @@ sub work {
 }
 
 sub keep_exit_status_for {
-    20
+    20;
 }    # keep exit status for 20 seconds after on_complete
 
 sub max_retries {2}
@@ -60,3 +105,29 @@ sub retry_delay {
         ;    # fails 2 seconds first time, then immediately
 }
 
+1;
+############################################################################
+package Worker::DeclineWithTime;
+use base 'TheSchwartz::Worker';
+use strict;
+use Test::More;
+
+my $client;
+sub set_client { $client = $_[1]; }
+
+sub work {
+    my ( $class, $job ) = @_;
+    if ($main::decline) {
+        $job->declined( time() + 2 );
+    }
+    else {
+        ok( $job->run_after < time(), 'ensure time out' );
+    }
+
+    return;
+}
+
+sub keep_exit_status_for {
+    20;
+}    # keep exit status for 20 seconds after on_complete
+1;
